# dspy_temporal

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
docs/: Temporal.md  arize-phoenix.md  dspy.md  tracing-design.md
examples/: compose_agents.py  compose_program.py  compose_refs.py  deploy_instance.py  instance_program.py  parallel_program.py  qa_program.py  react_program.py  run.py  run_compose.py  run_react.py  run_two_lm.py  two_lm_program.py  worker.py  worker_plugin.py
scripts/: tracing_spike.py  wt
src/dspy_temporal/: __init__.py  client.py  config.py  converter.py  execute.py  heartbeat.py  models.py  options.py  plugin.py  registry.py  sandbox.py  serde.py  worker.py
src/dspy_temporal/coarse/: __init__.py  activities.py  api.py  workflow.py
src/dspy_temporal/fine/: __init__.py  activities.py  lm.py  parallel.py  tools.py  workflow.py
src/dspy_temporal/tracing/: __init__.py  callback.py  config.py  semconv.py
tests/: conftest.py
tests/integration/: test_api_execute.py  test_compose_in_user_workflow.py  test_fine_tracing_workflow.py  test_fine_workflow.py  test_plugin_worker.py  test_tracing_workflow.py  test_two_lm_example.py  test_workflow.py
tests/unit/: test_activity.py  test_api.py  test_config.py  test_converter.py  test_examples_import.py  test_execute.py  test_fine_activity.py  test_fine_lm.py  test_fine_parallel.py  test_heartbeat.py  test_import_smoke.py  test_options.py  test_plugin.py  test_registry.py  test_serde.py  test_tracing_callback.py  test_tracing_semconv.py  test_tracing_setup.py  test_worker.py
