[project]
name = "dspy-temporal"
version = "0.1.0"
description = "Deploy DSPy programs on Temporal as durable workflows"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dspy>=3.3.0b1",
    "temporalio>=1.7",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]
tracing = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dspy_temporal"]

[tool.uv.sources]
dspy = { path = "../dspy", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["dspy_temporal"]
branch = true
parallel = true
# The coarse activity runs inside a ThreadPoolExecutor; trace those threads too.
concurrency = ["thread"]

[tool.coverage.paths]
# Fold the resolved import path back onto src/ for readable reports.
source = ["src/dspy_temporal", "*/site-packages/dspy_temporal"]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Floor, not a ceiling: the suite currently sits at 100%. 90 catches regressions
# without being brittle to a stray defensive line.
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
    "@(abc\\.)?abstractmethod",
]
omit = [
    "*/tests/*",
    "*/examples/*",
    # Pure import re-exports; running it to 100% on import would inflate the gate.
    "src/dspy_temporal/__init__.py",
]

[tool.coverage.html]
directory = "htmlcov"
