[project]
name = "dspy-temporal"
version = "0.1.0"
description = "Deploy DSPy programs on Temporal as durable workflows"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "dspy~=3.2.1",
    "temporalio>=1.7",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.15",
    "pre-commit>=3.5",
]
tracing = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dspy_temporal"]

[tool.ruff]
# 88 is also Ruff's default; stated explicitly to match the existing style.
line-length = 88
# Parallel-session worktrees are nested checkouts; never lint them from the main
# tree (also gitignored, which Ruff respects — this is belt-and-suspenders).
extend-exclude = [".worktrees"]

[tool.ruff.format]
# Double quotes are the project standard (also Ruff's default).
quote-style = "double"

[tool.ruff.lint]
# Tier 1: import sorting + bug-catching and simplification rules. These are
# high-signal and largely autofixable. Trailing-comma (COM812) and implicit
# string-concat (ISC001) are intentionally NOT selected — they conflict with the
# formatter, which already owns those concerns.
select = [
    "I",    # isort — import sorting
    "F",    # Pyflakes — undefined names, unused imports/variables
    "B",    # flake8-bugbear — likely bugs (mutable defaults, etc.)
    "C4",   # flake8-comprehensions — clearer/faster comprehensions
    "PIE",  # flake8-pie — misc lints (unnecessary pass, dict literals, ...)
    "SIM",  # flake8-simplify — simplifiable conditionals/context managers
    "RET",  # flake8-return — return-statement consistency
    "UP",   # pyupgrade — modern syntax (target py310, from requires-python)
    "RUF",  # Ruff-native rules (incl. RUF022 sorted __all__)
    # Tier 2: idioms + security.
    "PT",   # flake8-pytest-style — consistent fixtures/parametrize/raises
    "FA",   # flake8-future-annotations — flag missing `from __future__ import annotations`
    "G",    # flake8-logging-format — no f-strings/%-format in logging calls
    "ICN",  # flake8-import-conventions — conventional aliases
    "S",    # flake8-bandit — security checks
]

# Scoped relaxations for the rule groups the later tiers introduce: bandit (S)
# in Tier 2 and annotations (ANN) in Tier 3. Listed here ahead of selection so
# those commits stay focused on the rule additions themselves.
[tool.ruff.lint.per-file-ignores]
# Tests assert freely (S101) and don't need the library's annotation hygiene.
"tests/**" = ["S101", "ANN"]
# Examples are runnable teaching scripts: loose typing is expected.
"examples/**" = ["ANN"]
# Semantic-convention attribute-name constants (e.g. "llm.token_count.prompt").
# Bandit reads the "TOKEN"-named constants as hardcoded secrets — false positive.
"src/dspy_temporal/tracing/semconv.py" = ["S105"]
# The package root is a re-export hub: it imports the full surface and advertises
# only the headline subset via __all__. Advanced symbols stay importable as
# dt.<name>, so don't flag them as "imported but unused".
"src/dspy_temporal/__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["dspy_temporal"]
branch = true
parallel = true
# The coarse activity runs inside a ThreadPoolExecutor; trace those threads too.
concurrency = ["thread"]

[tool.coverage.paths]
# Fold the resolved import path back onto src/ for readable reports.
source = ["src/dspy_temporal", "*/site-packages/dspy_temporal"]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Floor, not a ceiling: the suite currently sits at 100%. 90 catches regressions
# without being brittle to a stray defensive line.
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
    "@(abc\\.)?abstractmethod",
]
omit = [
    "*/tests/*",
    "*/examples/*",
    # Pure import re-exports; running it to 100% on import would inflate the gate.
    "src/dspy_temporal/__init__.py",
]

[tool.coverage.html]
directory = "htmlcov"
